--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -15,10 +15,7 @@
 
 
 /*--------HEADER-----------------*/
-
-.header {
-    padding: 1em;
-}
+    
 
 /*--------ABOUT-----------------*/
 
@@ -69,7 +66,7 @@
 }
 
 .about__joinus {
-    padding: 8rem;
+    padding: 2rem 8rem;
 
     h3 {
         max-width: 100%;
@@ -85,11 +82,11 @@
 }
 
 .about__items {
-    padding: 8rem 0;
+    padding: 0 8rem;
 }
 
 .about__circle {
-    margin: 0 8rem 1rem;
+    margin: 0 1rem;
 }
 
 /*--------APPROACH-----------------*/
