--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
 @import 'variables';
 
 /*--------MAIN-----------------*/
@@ -32,11 +32,17 @@ body {
 }
 
 .subheaders {
-    font-weight: 300;
+    font-weight: 700;
     text-transform: uppercase;
     align-self: center;
     margin: 4.5rem 0 0 0;
     position: relative;
+    font-size: 2.5rem;
+    letter-spacing: 3px;
+    position: absolute;
+    transform: rotate(-90deg);
+    right: -30%;
+    top: 10%;
 
     &::after {
         content: '';
@@ -60,98 +66,147 @@ body {
 
 /*--------HEADER-----------------*/
 .header {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
     display: flex;
-    padding: 1rem;
+    padding: 0;
     justify-content: center;
     align-items: center;
-    background: #fff;
+    //background: #fff;
     z-index: 99;
-    box-shadow: 0 -2px 8px #ddd;
+    //box-shadow: 0 -2px 8px #ddd;
 
-}
-
-.header__home_smhide {
-    display: inline-block;
 }
 
 .header__hamburger {
     position: fixed;
-    bottom: 0;
-    left: 0;
+    top: 0;
     right: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0.25rem;
-    background: #fff;
+    margin: 0 1rem;
+    justify-self: flex-end;
     cursor: pointer;
+    z-index: 9999;
+    width: 50px;
+    height: 40px;
+}
 
-    i {
-        font-size: 1.2rem;
-    }
 
-    span {
-        font-size: 0.8rem;
-    }
+.menu__show1,
+.menu__show2,
+.header__linespan {
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+
+.header__line1_show {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    height: 4px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: $secondarybg;
+
+}
+
+.header__line2_show {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    height: 4px;
+    width: 30px;
+    border-radius: 10px;
+    background-color: $secondarybg;
+}
+
+.header__line1_hide {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    height: 4px;
+    width: 35px;
+    border-radius: 10px;
+    background-color: $secondarybg;
+    transform: rotate(-135deg);
+    transform-origin: center;
+}
+
+.header__line2_hide {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    height: 4px;
+    width: 35px;
+    border-radius: 10px;
+    background-color: $secondarybg;
+    transform: rotate(135deg);
+    transform-origin: center;
 }
 
 .header__logo {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    position: relative;
-    width: 100%;
+    position: absolute;
+    display: block;
+    top: 10%;
+    left: 50%;
+    margin: 1rem 0 0 -3.5rem;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 
     img {
-        display: inline-block;
+        display: block;
         position: absolute;
-        width: 10rem;
-        max-width: 10rem;
-        transform: translateY(5px);
+        width: 7rem;
+        max-width: 7rem;
+        background: $primarybg;
+        box-shadow: 0 0 0 100px $primarybg inset,
+            0 0 0 6px $primarybg;
+        border-radius: 50%;
     }
 
-}
-
-.fa-home {
-    font-size: 1.6rem;
-    color: $primarycolor;
-    cursor: pointer;
 }
 
 .header__navbar {
     position: fixed;
-    top: 10%;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background: #fff;
     color: #272727;
-    display: flex;
-    opacity: 0.95;
-    flex-direction: column;
     justify-content: space-around;
-    transition-property: display, height, width;
-    transform-origin: bottom;
+    transition-property: opacity, visibility;
+    transition-duration: 0.8s;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
     margin: 0;
     z-index: 1;
-    animation: slide 0.5s ease-out;
-    box-shadow: 2px 0 5px #272727;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.header__navbar_show {
+    visibility: visible;
+    opacity: 1;
 }
 
 
 .header__navbar_hide {
-    display: none;
-    transition-property: display, height, width;
+    visibility: hidden;
+    opacity: 0;
+    user-select: none;
 }
 
 .header__menu {
-    padding: 0 2rem;
+    padding: 0 1rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .header__menuitem {
@@ -159,11 +214,13 @@ body {
     margin: 0 0 3rem 0;
     cursor: pointer;
     color: $primarycolor;
+    font-size: 1.8rem;
+    text-transform: uppercase;
 
     &::after {
         content: '';
         width: 0;
-        height: 2px;
+        height: 3px;
         display: block;
         background: $primarybg;
         transition: width 0.5s;
@@ -180,15 +237,6 @@ body {
     display: none;
 }
 
-.header__close {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.5rem;
-    margin: 0 0 0.5rem 0;
-    cursor: pointer;
-}
 
 /*--------LANDING-----------------*/
 
@@ -235,8 +283,8 @@ body {
 }
 
 .landing__valueprop_span1 {
-    font-size: 1.6rem;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 900;
     margin: 0 0 0.5rem 0;
 }
 
@@ -273,7 +321,7 @@ body {
 .intro {
     display: flex;
     padding: 0;
-    height: max-content;
+    height: 100vh;
     justify-content: space-around;
     align-items: center;
 
@@ -326,12 +374,13 @@ body {
     grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 0;
+    height: 100vh;
 
     blockquote {
         color: #fff;
         font-size: 1.5rem;
         font-weight: bold;
-        grid-column: 1 / 4;
+        grid-column: 1 / -1;
         grid-row: 1 / 4;
         margin: 0 0 0 1.6rem;
         align-self: center;
@@ -355,7 +404,7 @@ body {
     width: 100%;
     height: 100%;
     grid-column: 1 / -1;
-    grid-row: 2 / -1;
+    grid-row: 4 / -1;
 
     img {
         width: 100%;
@@ -365,21 +414,81 @@ body {
 .about__inner_about {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .about__text {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    height: 100vh;
+    position: relative;
+}
 
-    p {
-        padding: 1.6rem;
+.about__text_para {
+    letter-spacing: 2px;
+    padding: 1.5rem;
+    line-height: 2;
+    font-size: 1.05rem;
+}
+
+.about__text_para2 {
+    align-self: flex-end;
+    border-top: 4px solid $primarybg;
+    width: 80%;
+
+    span {
+        font-size: 2rem;
     }
+}
 
+.about__text_para1 {
+    width: 70%;
+    align-self: flex-start;
+    border-bottom: 4px solid $primarybg;
+    margin: 3.5rem 0 2rem 0;
 }
 
 .about__us.subheaders {
     margin: 1rem 0 2rem 0;
+    position: absolute;
+    transform: rotate(-90deg);
+    right: -10%;
+    top: 30%;
+
+
+}
+
+.about__joinusbtn {
+    position: absolute;
+    transform: rotate(0deg);
+    bottom: 15%;
+    left: 0;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background: #fff;
+    z-index: 1;
+    padding: 0.4rem;
+    border-radius: 0 10px 10px 0;
+    color: $secondarybg;
+    cursor: pointer;
+    animation: bounceJoinUs 2s infinite;
+
+    &::before {
+        position: absolute;
+        content: '';
+        width: 16px;
+        height: 16px;
+        left: -1.5%;
+        top: 50%;
+        z-index: -1;
+        border-top: 2px solid $secondarybg;
+        border-left: 2px solid $secondarybg;
+        border-right: 2px solid transparent;
+        border-bottom: 2px solid transparent;
+        transform: rotate(-45deg) translateY(-67%);
+
+    }
 }
 
 .about__items {
@@ -389,6 +498,7 @@ body {
     padding: 1.6rem 0;
     position: relative;
     max-width: 80rem;
+    height: 100vh;
 }
 
 .about__circle {
@@ -397,6 +507,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background: #fff;
     align-items: center;
     margin: 0 1.6rem 1rem 1.6rem;
     position: relative;
@@ -446,6 +557,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 1.6rem;
+    height: 100vh;
 
     h3 {
         max-width: 40rem;
@@ -508,6 +620,7 @@ body {
 .approach {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .approach__inner_desc {
@@ -520,9 +633,11 @@ body {
     display: flex;
     flex-direction: column;
     padding: 1.6rem;
+    height: 100vh;
 
     p {
         margin: 0 0 2rem 0;
+        width: 70%;
     }
 }
 
@@ -538,6 +653,7 @@ body {
     display: flex;
     flex-direction: column;
     background: $primarybg;
+    height: 100vh;
 
     p {
         padding: 1rem 0 0.5rem 0;
@@ -657,6 +773,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .netscience__inner_disc {
@@ -667,7 +784,7 @@ body {
 .netscience__text {
 
     justify-content: center;
-    align-items: center;
+    height: 100vh;
 
     h4 {
         padding: 1.5rem 1.6rem 0;
@@ -676,6 +793,7 @@ body {
 
     p {
         padding: 1.5rem 1.6rem 0;
+        width: 70%;
     }
 }
 
@@ -691,11 +809,6 @@ body {
         margin: 2rem 0 1rem 0;
     }
 
-    button {
-        grid-column: 1 / -1;
-        grid-row: 20 / 21;
-        justify-self: center;
-    }
 }
 
 .netscience__circle {
@@ -868,14 +981,12 @@ body {
 
 /*--------ANIMATIONS--------*/
 
-@keyframes slide {
+@keyframes bounceJoinUs {
     0% {
-        transform: translateY(100%);
-        opacity: 0;
+        transform: translateY(0) rotate(-90deg);
     }
 
     100% {
-        transform: translateY(0);
-        opacity: 0.75;
+        transform: translateY(20px) rotate(-90deg);
     }
 }
