--- a/styles/style.css
+++ b/styles/style.css
@@ -33,13 +33,8 @@ body {
   text-transform: uppercase;
   align-self: center;
   margin: 4.5rem 0 0 0;
-  position: relative;
   font-size: 2.5rem;
   letter-spacing: 3px;
-  position: absolute;
-  transform: rotate(-90deg);
-  right: -30%;
-  top: 10%;
 }
 .subheaders::after {
   content: "";
@@ -77,7 +72,7 @@ body {
   position: fixed;
   top: 0;
   right: 0;
-  margin: 0 1rem;
+  margin: 0 2rem;
   justify-self: flex-end;
   cursor: pointer;
   z-index: 9999;
@@ -402,34 +397,37 @@ body {
 }
 
 .about__text_para2 {
-  align-self: flex-end;
-  border-top: 4px solid #FFDE70;
+  align-self: flex-start;
+  border-top: 3px solid #FFDE70;
   width: 80%;
+  height: 40%;
 }
 .about__text_para2 span {
   font-size: 2rem;
 }
 
 .about__text_para1 {
-  width: 70%;
-  align-self: flex-start;
-  border-bottom: 4px solid #FFDE70;
+  width: 80%;
+  align-self: flex-end;
+  border-bottom: 3px solid #FFDE70;
   margin: 3.5rem 0 2rem 0;
+  height: 60%;
 }
 
 .about__us.subheaders {
-  margin: 1rem 0 2rem 0;
-  position: absolute;
-  transform: rotate(-90deg);
-  right: -10%;
+  margin: 0;
+  left: -25%;
   top: 30%;
+  transform: rotate(-90deg);
+  transform-origin: top;
+  position: absolute;
 }
 
 .about__joinusbtn {
   position: absolute;
   transform: rotate(0deg);
-  bottom: 15%;
-  left: 0;
+  bottom: 20%;
+  right: 0;
   font-size: 1.5rem;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -577,6 +575,13 @@ body {
   position: relative;
 }
 
+.approach__header.subheaders {
+  left: -38%;
+  top: 9%;
+  transform: rotate(-90deg);
+  position: absolute;
+}
+
 .approach__inner_desc {
   display: flex;
   flex-direction: column;
@@ -588,9 +593,25 @@ body {
   padding: 1.6rem;
   height: 100vh;
 }
-.approach__about p {
-  margin: 0 0 2rem 0;
-  width: 70%;
+
+.approach__about_para {
+  letter-spacing: 2px;
+  padding: 1.5rem;
+  line-height: 2;
+  font-size: 1.05rem;
+}
+
+.approach__about_para1 {
+  width: 85%;
+  border-bottom: 2px solid #FFDE70;
+  align-self: flex-end;
+  margin: 1rem 0 2rem 0;
+}
+
+.approach__about_para2 {
+  width: 85%;
+  border-top: 2px solid #FFDE70;
+  align-self: flex-end;
 }
 
 .approach__banner {
@@ -718,6 +739,11 @@ body {
 .netscience__inner_disc {
   display: flex;
   flex-direction: column;
+}
+
+.netscience__inner_disc .subheaders {
+  position: absolute;
+  transform: rotate(-90deg);
 }
 
 .netscience__text {
