--- a/styles/style.css
+++ b/styles/style.css
@@ -306,7 +306,12 @@ body {
 .intro__text {
   grid-column: 1/-1;
   grid-row: 1/5;
-  padding: 1.6rem;
+  line-height: 2;
+  letter-spacing: 2px;
+  width: 80%;
+  margin: 2rem 0 0 3rem;
+  border-bottom: 3px solid #FFDE70;
+  padding: 2rem 0;
 }
 
 .intro__image {
@@ -393,7 +398,7 @@ body {
 .about__us.subheaders {
   width: 80%;
   padding: 0;
-  margin: 2rem;
+  margin: 3em 0 0 2rem;
   position: relative;
 }
 
@@ -404,6 +409,7 @@ body {
   padding: 0 0 2rem 0;
   letter-spacing: 2px;
   line-height: 2;
+  font-size: 1.1rem;
 }
 
 .about__join {
@@ -420,6 +426,7 @@ body {
   padding: 0 0 2rem 0;
   letter-spacing: 2px;
   line-height: 2;
+  font-size: 1.1em;
 }
 .about__join_para span {
   font-size: 2rem;
@@ -553,10 +560,11 @@ body {
 .approach__about_para {
   width: 80%;
   border-bottom: 3px solid #FFDE70;
-  margin: 3rem 0 2rem 3rem;
+  margin: 1rem 0 2rem 3rem;
   padding: 0 0 2rem 0;
   letter-spacing: 2px;
   line-height: 2;
+  font-size: 1.1rem;
 }
 
 .approach__about_more {
@@ -576,7 +584,7 @@ body {
 .approach__details_para {
   width: 80%;
   border-bottom: 3px solid #FFDE70;
-  margin: 2rem 0 1rem 3rem;
+  margin: 2rem 0 0 3rem;
   padding: 0 0 2rem 0;
   letter-spacing: 2px;
   line-height: 2;
@@ -709,22 +717,55 @@ body {
   flex-direction: column;
 }
 
-.netscience__inner_disc .subheaders {
-  position: absolute;
-  transform: rotate(-90deg);
-}
-
-.netscience__text {
-  justify-content: center;
+.netscience__intro {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
 }
-.netscience__text h4 {
-  padding: 1.5rem 1.6rem 0;
-  font-size: 0.9rem;
+
+.netscience__header.subheaders {
+  width: 80%;
+  padding: 0;
+  margin: 3em 2em 2rem;
+  position: relative;
 }
-.netscience__text p {
-  padding: 1.5rem 1.6rem 0;
-  width: 70%;
+.netscience__header.subheaders span {
+  font-weight: normal;
+}
+
+.netscience__intro_header {
+  width: 80%;
+  border-top: 1px solid #FFDE70;
+  border-bottom: 1px solid #FFDE70;
+  margin: 1rem 0 2rem 3rem;
+  padding: 2rem 0;
+  letter-spacing: 2px;
+  line-height: 2;
+  font-size: 1.2rem;
+}
+
+.netscience__intro_more {
+  cursor: pointer;
+  width: 50%;
+  text-align: center;
+  margin: auto;
+  text-transform: uppercase;
+}
+
+.netscience__details {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.netscience__details_para {
+  width: 80%;
+  border-bottom: 3px solid #FFDE70;
+  margin: 1rem 0 2rem 3rem;
+  padding: 0 0 2rem 0;
+  letter-spacing: 2px;
+  line-height: 2;
+  font-size: 1.1rem;
 }
 
 .netscience__apps {
