updates to styling

--- a/style.scss
+++ b/style.scss
@@ -427,7 +427,7 @@ body {
     flex-direction: column;
     height: 100vh;
     position: relative;
-
+    justify-content: center;
 }
 
 
@@ -453,7 +453,7 @@ body {
     flex-direction: column;
     height: 100vh;
     position: relative;
-
+    justify-content: center;
 }
 
 .about__join_para {
@@ -594,7 +594,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-
+    justify-content: center;
 }
 
 .approach__header.subheaders {
