--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
   line-height: 1.6;
   scroll-behavior: smooth;
   font-size: 12px;
+  color: #272727;
 }
 
 body {
@@ -313,6 +314,7 @@ body {
   border-top: 1px solid #FFDE70;
   border-bottom: 1px solid #FFDE70;
   padding: 2rem 0;
+  font-size: 1.1rem;
 }
 
 .intro__image {
@@ -400,14 +402,14 @@ body {
 .about__us.subheaders {
   width: 80%;
   padding: 0;
-  margin: 3em 0 0 2rem;
+  margin: 0;
   position: relative;
 }
 
 .about__intro_para {
   width: 80%;
   border-bottom: 3px solid #FFDE70;
-  margin: 1rem 0 2rem 3rem;
+  margin: 2rem 0 2rem 3rem;
   padding: 0 0 2rem 0;
   letter-spacing: 2px;
   line-height: 2;
@@ -604,38 +606,52 @@ body {
   flex-direction: column;
   align-items: center;
   letter-spacing: 2px;
+  line-height: 2;
   justify-content: center;
+  background: #FFDE70;
+  color: #272727;
+  padding: 2rem;
 }
 
 .approach__seasons {
   display: flex;
   flex-direction: column;
-  background: #FFDE70;
   height: 100vh;
-}
-.approach__seasons p {
-  padding: 1rem 0 0.5rem 0;
 }
 
 .approach__season1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1.6rem;
+  padding: 0;
+  height: 100vh;
 }
 
 .approach__intro {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 1rem 0;
+}
+.approach__intro p {
+  border-bottom: 3px solid #FFDE70;
+  margin: 2rem 0 0 3rem;
+  width: 80%;
+  letter-spacing: 2px;
+  line-height: 2;
+  font-size: 1.1rem;
+  padding: 0 0 2rem 0;
 }
 
-.approach__cta {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 1rem;
+.approach__season1_more {
+  display: block;
+  cursor: pointer;
+  width: 50%;
+  text-align: center;
+  margin: 2rem auto;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 700;
+  height: 10vh;
 }
 
 .approach__season1cards {
@@ -730,12 +746,13 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  justify-content: center;
 }
 
 .netscience__header.subheaders {
   width: 80%;
   padding: 0;
-  margin: 3em 2em 2rem;
+  margin: 5em 2em 2rem;
   position: relative;
 }
 .netscience__header.subheaders span {
@@ -750,7 +767,7 @@ body {
   padding: 2rem 0;
   letter-spacing: 2px;
   line-height: 2;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 
 .netscience__intro_more {
@@ -759,6 +776,8 @@ body {
   text-align: center;
   margin: auto;
   text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 .netscience__details {
