--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,7 @@
     line-height: 1.6;
     scroll-behavior: smooth;
     font-size: 12px;
-    color: #272727;
+    color: $primarycolor;
 }
 
 body {
@@ -420,7 +420,7 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 4rem 0 0 0;
+    padding: 0;
 
 }
 
@@ -682,17 +682,37 @@ body {
 
 .approach__intro {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+
+    &::after {
+        position: absolute;
+        content: '';
+        width: 80%;
+        height: 100%;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        border-bottom: 3px solid #FFDE70;
+    }
 
     p {
-        border-bottom: 3px solid $primarybg;
-        margin: 2rem 0 0 3rem;
+
         width: 80%;
         letter-spacing: 2px;
         line-height: 2;
         font-size: 1.1rem;
-        padding: 0 0 2rem 0;
+        padding: 0;
+
+        &:nth-child(1) {
+            margin: 2rem 0;
+        }
+
+        &:nth-child(2) {
+            padding: 0 0 2rem 0;
+        }
     }
 }
 
@@ -806,6 +826,7 @@ body {
 .netscience__inner_disc {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .netscience__intro {
@@ -850,13 +871,24 @@ body {
 .netscience__details {
     display: flex;
     flex-direction: column;
+    position: relative;
 
+    &::after {
+        position: absolute;
+        content: '';
+        width: 80%;
+        height: 100%;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        border-bottom: 3px solid #FFDE70;
+    }
 }
 
 .netscience__details_para {
     width: 80%;
-    border-bottom: 3px solid $primarybg;
-    margin: 1rem 0 2rem 3rem;
+    margin: 0;
+    align-self: center;
     padding: 0 0 2rem 0;
     letter-spacing: 2px;
     line-height: 2;
@@ -906,7 +938,7 @@ body {
 
     p {
         word-wrap: break-word;
-        padding: 0 2rem;
+        padding: 0 6rem;
         justify-self: center;
         text-align: center;
         font-size: 0.8rem;
@@ -951,7 +983,6 @@ body {
     margin: 2rem 0 1rem;
     display: flex;
     flex-direction: column;
-    color: #fff;
 }
 
 .footer__inner {
@@ -977,12 +1008,17 @@ body {
 .footer__copy {
     padding: 1.5rem 1.6rem;
 
+    h5 {
+        color: $secondarycolor;
+    }
+
     ul {
         display: flex;
 
         li {
             margin: 0 0.5rem 0 0;
             text-decoration: underline;
+            color: $secondarycolor;
         }
     }
 
@@ -992,14 +1028,21 @@ body {
     a {
         font-size: 1.5rem;
         text-decoration: none;
+        color: $secondarycolor;
     }
 }
 
 .footer__contact {
     border: none;
+    color: $secondarycolor;
+
+    span {
+        color: $secondarycolor;
+    }
 
     i {
         margin: 0 0.5rem 0 0;
+        color: $secondarycolor;
     }
 }
 
@@ -1009,11 +1052,24 @@ body {
 
 .footer__social {
     border-top: 1px solid #4e4e4e;
+
+    i {
+        color: $secondarycolor;
+    }
 }
 
 .footer__copy {
     border-top: 1px solid #4e4e4e;
     margin: 0 0 2rem 0;
+
+    p {
+        color: $secondarycolor;
+
+        span {
+            color: $secondarycolor;
+        }
+    }
+
 }
 
 
