--- a/style.scss
+++ b/style.scss
@@ -62,18 +62,20 @@ body {
 
 /*--------HEADER-----------------*/
 .header {
-    position: relative;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
     display: flex;
     padding: 0;
-    justify-content: center;
-    align-items: center;
-    //background: #fff;
+    background: #fff;
     z-index: 99;
-    //box-shadow: 0 -2px 8px #ddd;
 
+
+}
+
+.header_boxshadow {
+    box-shadow: 0 -2px 4px #272727;
 }
 
 .header__hamburger {
@@ -143,24 +145,16 @@ body {
 }
 
 .header__logo {
-    position: absolute;
+    position: relative;
     display: block;
-    top: 10%;
-    left: 50%;
-    margin: 1rem 0 0 -3.5rem;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    margin: 0 auto;
+    background: #fff;
 
     img {
         display: block;
-        position: absolute;
         width: 7rem;
         max-width: 7rem;
-        background: $primarybg;
-        box-shadow: 0 0 0 100px $primarybg inset,
-            0 0 0 6px $primarybg;
-        border-radius: 50%;
+
     }
 
 }
@@ -548,7 +542,8 @@ body {
     height: 100px;
     border-radius: 50%;
     background: #fff;
-    border: 2px solid #eeece6;
+    border-top: 2px solid #eeece6;
+    border-bottom: 2px solid #eeece6;
     z-index: 2;
 
     img {
