--- a/styles/style.css
+++ b/styles/style.css
@@ -58,15 +58,18 @@ body {
 
 /*--------HEADER-----------------*/
 .header {
-  position: relative;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
   display: flex;
   padding: 0;
-  justify-content: center;
-  align-items: center;
+  background: #fff;
   z-index: 99;
+}
+
+.header_boxshadow {
+  box-shadow: 0 -2px 4px #272727;
 }
 
 .header__hamburger {
@@ -133,23 +136,15 @@ body {
 }
 
 .header__logo {
-  position: absolute;
+  position: relative;
   display: block;
-  top: 10%;
-  left: 50%;
-  margin: 1rem 0 0 -3.5rem;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+  margin: 0 auto;
+  background: #fff;
 }
 .header__logo img {
   display: block;
-  position: absolute;
   width: 7rem;
   max-width: 7rem;
-  background: #FFDE70;
-  box-shadow: 0 0 0 100px #FFDE70 inset, 0 0 0 6px #FFDE70;
-  border-radius: 50%;
 }
 
 .header__navbar {
@@ -508,7 +503,8 @@ body {
   height: 100px;
   border-radius: 50%;
   background: #fff;
-  border: 2px solid #eeece6;
+  border-top: 2px solid #eeece6;
+  border-bottom: 2px solid #eeece6;
   z-index: 2;
 }
 .about__circle_img img {
